(hopefully) fix font size issue on mobile for cypherpunk link text

--- a/css/custom.css
+++ b/css/custom.css
@@ -1797,9 +1797,12 @@ img.logo {
 }
 
 #about .cp-currency p, #about .cp-currency p a {
-    font-weight: 700;
     color: #0073fc;
     color: #ff3b9a;
+}
+
+#about .cp-currency p {
+    font-weight: 700;
     font-size: 2.8rem;
 }
 
